[gd_scene load_steps=18 format=3 uid="uid://ca2il73ug60f8"]

[ext_resource type="Script" path="res://scenes/scrip_inventario.gd" id="1_pitas"]
[ext_resource type="Texture2D" uid="uid://b4jm2pbc85vlm" path="res://scenes/Lvl tomy/Classroom_alegre.jpeg" id="2_v7q5b"]
[ext_resource type="AudioStream" uid="uid://li0to1xojj4d" path="res://assets/music/Canciones propias/Tensa.wav" id="3_y28qc"]
[ext_resource type="Texture2D" uid="uid://cw01lvdfq6xd" path="res://assets/whiteCircle.png" id="5_jf0qq"]
[ext_resource type="Script" path="res://scenes/Lvl ale/whiteCircle.gd" id="6_8630h"]
[ext_resource type="Script" path="res://scenes/dic_button_gameplay.gd" id="7_18w16"]
[ext_resource type="Texture2D" uid="uid://thiha28tsny3" path="res://assets/books.png" id="8_ho6ue"]
[ext_resource type="PackedScene" uid="uid://ctghvosvhtgwc" path="res://scenes/palabra.tscn" id="9_pd5d1"]
[ext_resource type="Script" path="res://scenes/Lvl ale/Camera2D.gd" id="10_2k6l2"]
[ext_resource type="Script" path="res://scenes/Dictionary_slide.gd" id="11_kk6hg"]
[ext_resource type="PackedScene" uid="uid://ca6ulc0jbl1kj" path="res://scenes/ui_palabra.tscn" id="12_xiqvb"]
[ext_resource type="Texture2D" uid="uid://dxnok5mya3fam" path="res://assets/diccionario.png" id="13_3t55w"]

[sub_resource type="Animation" id="Animation_tmahn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(662, 761)]
}

[sub_resource type="Animation" id="Animation_j8a81"]
resource_name = "asomar_libro"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(662, 761), Vector2(662, 461)]
}

[sub_resource type="Animation" id="Animation_kt7q1"]
resource_name = "avanzar"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3kwxq"]
_data = {
"RESET": SubResource("Animation_tmahn"),
"asomar_libro": SubResource("Animation_j8a81"),
"avanzar": SubResource("Animation_kt7q1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n31q"]
size = Vector2(877, 423)

[node name="Light" type="Node2D"]
script = ExtResource("1_pitas")

[node name="Background" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(875.56, 318)
scale = Vector2(1.11536, 0.82)
texture = ExtResource("2_v7q5b")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_y28qc")
autoplay = true

[node name="BackgMovement" type="CanvasLayer" parent="."]
layer = 3

[node name="MoveLeft" type="TextureRect" parent="BackgMovement"]
anchors_preset = -1
anchor_right = 0.187
anchor_bottom = 1.0
offset_right = 0.639984
offset_bottom = -1.0

[node name="MoveRight" type="TextureRect" parent="BackgMovement"]
anchors_preset = -1
anchor_left = 0.798
anchor_right = 1.002
anchor_bottom = 1.0
offset_left = 0.559937
offset_top = 7.0
offset_right = 0.439941
offset_bottom = -1.0
size_flags_horizontal = 8

[node name="whiteCircle" type="Sprite2D" parent="BackgMovement"]
modulate = Color(1, 0.996078, 0.768627, 0.878431)
show_behind_parent = true
texture_filter = 1
position = Vector2(601, 296)
scale = Vector2(7, 7)
texture = ExtResource("5_jf0qq")
script = ExtResource("6_8630h")

[node name="TherapyButton" type="CanvasLayer" parent="."]
script = ExtResource("7_18w16")

[node name="Dic_button" type="Button" parent="TherapyButton"]
offset_left = 261.0
offset_top = 10.0
offset_right = 328.0
offset_bottom = 69.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="TherapyButton"]
position = Vector2(295, 42)
scale = Vector2(1.406, 1.30883)
texture = ExtResource("8_ho6ue")
hframes = 3
vframes = 2
frame = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Raiz_Palabras" type="Node2D" parent="."]

[node name="Palabra2" parent="Raiz_Palabras" instance=ExtResource("9_pd5d1")]
position = Vector2(1195, 106)
palabra = "Verg√ºenza"

[node name="Palabra3" parent="Raiz_Palabras" instance=ExtResource("9_pd5d1")]
position = Vector2(457, 280)
palabra = "Temor"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)
script = ExtResource("10_2k6l2")

[node name="Dictionary" type="Node2D" parent="Camera2D"]
unique_name_in_owner = true
script = ExtResource("11_kk6hg")
ui_palabra = ExtResource("12_xiqvb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/Dictionary"]
libraries = {
"": SubResource("AnimationLibrary_3kwxq")
}

[node name="Node2D" type="Node2D" parent="Camera2D/Dictionary"]
position = Vector2(662, 761)

[node name="Dictionary" type="Sprite2D" parent="Camera2D/Dictionary/Node2D"]
scale = Vector2(9.53093, 9.23)
texture = ExtResource("13_3t55w")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Camera2D/Dictionary/Node2D/Dictionary"]
position = Vector2(-69.4581, -82.4485)
scale = Vector2(0.104922, 0.108342)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Dictionary/Node2D/Dictionary/Area2D"]
position = Vector2(667, 763)
shape = SubResource("RectangleShape2D_1n31q")

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/Dictionary/Node2D"]
custom_minimum_size = Vector2(0.47, 0)
offset_left = -306.0
offset_top = -205.0
offset_right = 553.0
offset_bottom = 192.0
theme_override_constants/margin_top = 52

[node name="PalabraContainer" type="GridContainer" parent="Camera2D/Dictionary/Node2D/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 384
theme_override_constants/v_separation = 55
columns = 2

[connection signal="input_event" from="Camera2D/Dictionary/Node2D/Dictionary/Area2D" to="Camera2D/Dictionary" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Camera2D/Dictionary/Node2D/Dictionary/Area2D" to="Camera2D/Dictionary" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Dictionary/Node2D/Dictionary/Area2D" to="Camera2D/Dictionary" method="_on_area_2d_mouse_exited"]
